# -hostel-management-openenv

./: .gitignore  ARCHITECTURE.md  CLEANUP_SUMMARY.md  DEPLOYMENT_GUIDE.md  FINAL_VERIFICATION.md  HACKATHON_IMPLEMENTATION_COMPLETE.md  HACKATHON_PREP_SPEC_SUMMARY.md  HACKATHON_SUBMISSION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.txt  LAUNCH_SYSTEM.bat  QUICK_START_HACKATHON.md  README.md  SDG_Hackathon_Presentation.md  SEED_DATA.bat  SESSION_SUMMARY.md  SETUP_INSTRUCTIONS.md  index.html  package-lock.json  package.json  tailwind.config.js
backend/: package-lock.json  package.json  render.yaml  server.js
backend/config/: passport.js
backend/models/: Complaint.js  EnergyUsage.js  Event.js  FoodMenu.js  LaundryStatus.js  Maintenance.js  ParkingSlot.js  Room.js  SecurityLog.js  StudyPod.js  Transaction.js  User.js  Vacation.js
backend/routes/: admin.js  ai.js  auth.js  complaints.js  events.js  finance.js  food.js  forecast.js  iot.js  laundry.js  news.js  parents.js  parking.js  payments.js  rooms.js  sample.js  security.js  studypods.js  tourism.js  vacation.js
backend/scripts/: populateDummyData.js
backend/services/: aiService.js  huggingFaceService.js  imageService.js  newsService.js  telegramService.js  (+1 more)
meta-openenv/: .dockerignore  .gitignore  Dockerfile  README.md  README_SUBMISSION.md  SUBMISSION_README.md  __init__.py  client.py  hostel_env.py  inference.py  models.py  openenv.yaml  pyproject.toml  run_standalone.py  tasks.py
meta-openenv/server/: __init__.py  app.py  hostel_environment.py  requirements.txt
src/: App.jsx  config.js  index.css
(+43 files in other folders)
